cmake_minimum_required(VERSION 3.10)
project(identme)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_BUILD_TYPE "MinSizeRel" CACHE STRING "Build type" FORCE)

add_executable(identme main.cpp)

IF (WIN32)
    target_link_libraries(identme PRIVATE Winhttp)
ELSE()
    find_package(CURL REQUIRED)
    target_link_libraries(identme PRIVATE CURL::libcurl)
    include_directories(${CURL_INCLUDE_DIRS})
ENDIF()

if(MSVC)
    target_compile_options(identme PRIVATE /EHsc /GL)
    set_property(TARGET identme PROPERTY LINK_FLAGS "/LTCG /OPT:REF /OPT:ICF")
else()
    target_compile_options(identme PRIVATE -Os -flto -s)
    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()
install(TARGETS identme DESTINATION bin)
